# Rust_Api

./: .gitignore  README.md
app/: .env  Cargo.toml  Dockerfile
app/migrations/20250107000001_create_users_and_tasks_tables/: down.sql  up.sql
app/src/: config.rs  db.rs  error.rs  jwt.rs  main.rs
app/src/handlers/: mod.rs  task.rs
app/src/middleware/: auth.rs
app/src/models/: task.rs  user.rs
deploy/app/: app-db-secret.yaml  rust-api-config.yaml  rust-api-deployment.yaml  rust-api-ingress.yaml
deploy/gitea/: gitea-deployment.yaml  namespace.yaml
deploy/keycloak/: keycloak-db-cluster.yaml  keycloak-db-superuser.yaml  keycloak-deployment.yaml  keycloak-ingress.yaml  keycloak-secrets.yaml
deploy/postgres/: cnpg-operator.yaml  postgres-cluster.yaml  rust-api-db-superuser.yaml
docs/: api-documentation.md  day8-assessment.md  deployment-guide.md  development-progress.md
docs/diagrams/: architecture-overview.md
docs/runbooks/: day1-2.md  day8-keycloak.md  env.md  task1-cluster-setup.md  task1.md
infra/: README.md
infra/ansible/: ansible.cfg
infra/ansible/.keys/: id_rsa_ansible  id_rsa_ansible.pub
infra/ansible/inventory/: hosts.ini
infra/ansible/playbooks/: main.yml  site.yml
infra/ansible/roles/common/meta/: main.yml
infra/ansible/roles/common/tasks/: main.yml
infra/certs/: ca.crt  ca.key  ca.srl  registry.crt  registry.key
infra/scripts/: deploy.sh  generate-certs.sh  image-list.txt
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/templates/: hosts.j2
scripts/: cleanup.sh  image-list.txt  setup.sh
(+12 files in other folders)
